# GlassEngine

./: .gitmodules  CMakeLists.txt  main.cpp
Assets/Geometry/: Grid.fbx  box.fbx
Assets/Shaders/: shaders.hlsl
Core/EngineCore/: CMakeLists.txt
Core/EngineCore/include/: GlassEngine.hpp  GlassEngineTemplate.hpp  RuntimeGlobalContext.hpp  SceneManager.hpp  StaticMesh.hpp  TObject.hpp  WindowSystem.hpp
Core/EngineCore/src/: GlassEngine.cpp  RuntimeGlobalContext.cpp  SceneManager.cpp  StaticMesh.cpp  TObject.cpp  WindowSystem.cpp
Core/GUI/: CMakeLists.txt
Core/GUI/include/: FileImporter.hpp  pch.hpp
Core/GUI/src/: FileImporter.cpp
Core/RenderCore/: CMakeLists.txt
Core/RenderCore/include/: CameraBase.hpp  DirectXRenderer.hpp  DirectXWindow.hpp  Renderer.hpp  RendererBase.hpp  StaticMeshRenderProxyBase.hpp  WindowBase.hpp  window.hpp
Core/RenderCore/include/DirectXRHI/: Camera.hpp  DirectXRenderSystem.hpp  DirectXRenderer.hpp  DirectXWindow.hpp  RootSignature.hpp  StaticMeshDirectXProxy.hpp
Core/RenderCore/include/DirectXRHI/Utils/: DXHelperFunc.h  DXSampleHelper.h  stdafx.h
Core/RenderCore/src/: CameraBase.cpp  DirectXRenderer.cpp  DirectXWindow.cpp  Renderer.cpp  RendererBase.cpp  StaticMeshRenderProxyBase.cpp  WindowBase.cpp  stdafx.cpp  window.cpp
Core/RenderCore/src/DirectXRHI/: Camera.cpp  DirectXRenderSystem.cpp  DirectXRenderer.cpp  DirectXWindow.cpp  RootSignature.cpp  StaticMeshDirectXProxy.cpp  stdafx.cpp
Core/ThirdPartys/: CMakeLists.txt
